# m2m-course-design

./: .gitignore  README.md
assert/: dashboard_layout.puml  m2m_topology.puml  mqtt_control_sequence.puml  resource_device_class.puml
backend/platform-service/: Makefile  README.md  pyproject.toml
backend/platform-service/app/: demo_simulator.py  main.py  mqtt_bridge.py  state_store.py
backend/platform-service/docs/: api.md
backend/platform-service/tests/: test_health.py
docs/: deployment-and-test-plan.md  lifecycle-and-state-machines.md  product-prd.md  protocol-contract.md  topics-and-payload.md  topology.md  windows-esp32-setup.md
firmware/: README.md
firmware/esp32-gateway/: .gitignore  README.md  STATE_MACHINE.md  platformio.ini
firmware/esp32-gateway/src/: espnow_protocol.c  espnow_protocol.h  main.c
firmware/esp32-terminal-a/: CMakeLists.txt  STATE_MACHINE.md  platformio.ini
firmware/esp32-terminal-a/src/: main.c
firmware/esp32-terminal-b/: CMakeLists.txt  STATE_MACHINE.md  platformio.ini
firmware/esp32-terminal-b/src/: main.c
opening/: main.typ
report/: main.typ
scripts/: deploy-stack.ps1  deploy-stack.sh  dev-fullstack.ps1  dev-fullstack.sh  smoke-e2e.ps1  smoke-e2e.sh  stop-stack.ps1  stop-stack.sh
web/dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/dashboard/src/: App.css  App.tsx  index.css
web/stitch_m2m/: m2m_system_prd.md
web/stitch_m2m/event_history_logs/: code.html
web/stitch_m2m/interactive_demo_mode/: code.html
web/stitch_m2m/m2m_system_dashboard/: code.html
(+18 files in other folders)
