[project]
name = "platform-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.121.0",
    "pydantic==2.12.3",
    "uvicorn==0.38.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
